--- a/index.html
+++ b/index.html
@@ -633,6 +633,7 @@ input[type="number"] {
    /* ===============================
    1RM 입력 폭 2/3
 ================================ */
+#tab1 #liftSelect,  
 #tab1 #weight,
 #tab1 #reps,
 #tab1 #goBtn {
