--- a/index.html
+++ b/index.html
@@ -1015,12 +1015,33 @@ goBtn.addEventListener('click', ()=> {
         return;
     }
 
-    const oneRM = weight * (1 + reps * 0.0333);
+// NSCA 1RM 계수표 (1~10RM)
+const NSCA_COEF = {
+  bench: {
+    1: 1.00, 2: 0.95, 3: 0.93, 4: 0.90, 5: 0.87,
+    6: 0.85, 7: 0.83, 8: 0.80, 9: 0.77, 10: 0.75
+  },
+  squat: {
+    1: 1.00, 2: 0.96, 3: 0.94, 4: 0.92, 5: 0.89,
+    6: 0.87, 7: 0.85, 8: 0.82, 9: 0.79, 10: 0.76
+  },
+  dead: {
+    1: 1.00, 2: 0.97, 3: 0.95, 4: 0.93, 5: 0.90,
+    6: 0.88, 7: 0.86, 8: 0.83, 9: 0.80, 10: 0.77
+  }
+};
+
+
+   
+    const coef = NSCA_COEF[lift][reps];
+      const oneRM = weight / coef;
 
     // RM마다 세로 간격 넓게
     let html = '';
     for (let r=1; r<=10; r++){
-        let rmWeight = oneRM / (1 + (r-1)*0.0333);
+        const rmCoef = NSCA_COEF[lift][r];
+         let rmWeight = oneRM * rmCoef;
+
         html += `<div style="
                         text-align:center;
                         color:white;
