--- a/index.html
+++ b/index.html
@@ -602,20 +602,10 @@ td, th {
 }
 
 /* 날짜 모드는 절대 영향 안 받음 */
-   
-/* 메모 스크롤바 숨기기 */
-.memo {
-  scrollbar-width: none;      /* Firefox */
-  -ms-overflow-style: none;   /* IE / Edge */
-}
-
-.memo::-webkit-scrollbar {
-  display: none;              /* Chrome / Safari */
-}
 
    
    
-/* .css ㅊㄴㄴ붙여넣기 */
+/* .css 붙여넣기 */
    
 
 
@@ -633,7 +623,6 @@ input[type="number"] {
    /* ===============================
    1RM 입력 폭 2/3
 ================================ */
-#tab1 #liftSelect,  
 #tab1 #weight,
 #tab1 #reps,
 #tab1 #goBtn {
@@ -753,27 +742,16 @@ input[type="number"] {
 
 </div>
 
-<!-- 1RM ----------------------------------------------------------------->
+<!-- 1RM -->
 <div id="tab1" class="tabContent active">
-
-  <!-- 종목 선택 -->
-  <select id="liftSelect">
-    <option value="bench">벤치</option>
-    <option value="squat">스쿼트</option>
-    <option value="dead">데드</option>
-  </select>
-
   <input id="weight" type="number" placeholder="kg">
-  <select id="reps"></select>
-  <button id="goBtn">GO</button>
-
-  <div id="result"></div>
-  <div id="tableArea"></div>
+    <select id="reps"></select>
+    <button id="goBtn">GO</button>
+    <div id="result"></div>
+    <div id="tableArea"></div>
 </div>
 
-<!-- 1RM ----------------------------------------------------------------->
-
-<!-- 3대 ------------------------------------------------------------------>
+<!-- 3대 -->
 <div id="tab2" class="tabContent">
 
    
@@ -820,14 +798,11 @@ input[type="number"] {
     <!-- ✅ 여기 -->
     <div id="recordMessage"
          style="font-size:12px; color:#FFD700; margin-top:6px;">
-    </div>        
+    </div>
+
+
+        
 </div>
-<!-- 3대 ------------------------------------------------------------------>
-
-
-
-
-   
 <div id="tab4" class="tabContent">
 
 <div id="acc-part-screen">
@@ -937,8 +912,6 @@ const tabContents = document.querySelectorAll('.tabContent');
 const weightSelect = document.getElementById('weight');
 const repsSelect = document.getElementById('reps');
 const goBtn = document.getElementById('goBtn');
-const liftSelect = document.getElementById("liftSelect");
-
 const resultDiv = document.getElementById('result');
 const tableArea = document.getElementById('tableArea');
 
@@ -1003,10 +976,8 @@ tabBtns.forEach(btn => {
 
 
 goBtn.addEventListener('click', ()=> {
-   const lift = liftSelect.value;
     const weight = parseFloat(weightSelect.value);
     const reps = parseInt(repsSelect.value);
-
 
     if(!weight || !reps){
         tableArea.innerHTML = `<div style="text-align:center;color:#ff5555;margin-top:10px;">
@@ -1015,33 +986,12 @@ goBtn.addEventListener('click', ()=> {
         return;
     }
 
-// NSCA 1RM 계수표 (1~10RM)
-const NSCA_COEF = {
-  bench: {
-    1: 1.00, 2: 0.95, 3: 0.93, 4: 0.90, 5: 0.87,
-    6: 0.85, 7: 0.83, 8: 0.80, 9: 0.77, 10: 0.75
-  },
-  squat: {
-    1: 1.00, 2: 0.96, 3: 0.94, 4: 0.92, 5: 0.89,
-    6: 0.87, 7: 0.85, 8: 0.82, 9: 0.79, 10: 0.76
-  },
-  dead: {
-    1: 1.00, 2: 0.97, 3: 0.95, 4: 0.93, 5: 0.90,
-    6: 0.88, 7: 0.86, 8: 0.83, 9: 0.80, 10: 0.77
-  }
-};
-
-
-   
-    const coef = NSCA_COEF[lift][reps];
-      const oneRM = weight / coef;
+    const oneRM = weight * (1 + reps * 0.0333);
 
     // RM마다 세로 간격 넓게
     let html = '';
     for (let r=1; r<=10; r++){
-        const rmCoef = NSCA_COEF[lift][r];
-         let rmWeight = oneRM * rmCoef;
-
+        let rmWeight = oneRM / (1 + (r-1)*0.0333);
         html += `<div style="
                         text-align:center;
                         color:white;
