--- a/index.html
+++ b/index.html
@@ -1259,7 +1259,7 @@ recordAdd.addEventListener('click', async ()=>{
         reps
     };
 
-    f(lift === 'bench') records.bench.unshift(item);
+if(lift === 'bench') records.bench.unshift(item);
 if(lift === 'squat') records.squat.unshift(item);
 if(lift === 'dead')  records.dead.unshift(item);
 
