--- a/index.html
+++ b/index.html
@@ -626,14 +626,20 @@ input[type="number"] {
 #tab1 #weight,
 #tab1 #reps,
 #tab1 #goBtn {
-    width: 66%;          /* 가로 2/3 */
-    height: auto;        /* 높이 자동 */
-    padding: 8px;        /* 적당히 줄임 */
-    font-size: 16px;     /* 글자 크기 */
-    margin: 10px auto;   /* 가운데 정렬 */
+    width: 66%;
+    height: auto;
+    padding: 10px;
+    font-size: 16px;
+    margin: 10px auto;
     display: block;
-    border-radius: 10px; /* 둥글게 유지 */
+    border-radius: 12px;
+
+    background: #000;
+    color: #fff;
+    border: 1px solid #fff;
+    box-sizing: border-box;
 }
+
 
 #tableArea {
     margin-top: 30px;   /* 기존에 없으면 추가 */
