--- a/index.html
+++ b/index.html
@@ -626,19 +626,18 @@ input[type="number"] {
 #tab1 #weight,
 #tab1 #reps,
 #tab1 #goBtn {
-    width: 66%;
-    height: auto;
+    width: 70%;
     padding: 10px;
     font-size: 16px;
     margin: 10px auto;
     display: block;
-    border-radius: 12px;
+    border-radius: 14px;
 
-    background: #000;
-    color: #fff;
-    border: 1px solid #fff;
-    box-sizing: border-box;
+    background: #111;
+    color: #eee;
+    border: 1px solid #2a2a2a;
 }
+
 
 
 #tableArea {
