--- a/index.html
+++ b/index.html
@@ -429,14 +429,16 @@ td, th {
 }
 
 .part-btn {
-  background: #000;
-  color: #fff;
-  border: 1px solid #fff;
-  border-radius: 12px;
+  background: #111;
+  color: #eee;
+  border: 1px solid #2a2a2a;
+  border-radius: 14px;
   padding: 14px;
-  font-size: 16px;
-  letter-spacing: 1px;
+  font-size: 15px;
+  font-weight: 500;
+  letter-spacing: 0.3px;
 }
+
 .exercise-search {
   width: 100%;
   height: 36px;          /* ← 핵심 (보통 52~56px에서 줄임) */
