--- a/index.html
+++ b/index.html
@@ -631,6 +631,14 @@ td, th {
   color: #eee;
   line-height: 1.6;
 }
+/* recordAdd 버튼만 작게 */
+#recordAdd {
+  height: 30px;        /* kg / 회 보다 2/3 */
+  padding: 0 12px;
+  font-size: 14px;
+  border-radius: 8px;
+  font-weight: 500;
+}
 
 
 
