--- a/index.html
+++ b/index.html
@@ -1846,14 +1846,13 @@ threeToggleBtn.addEventListener("click", () => {
 });
 // 🔥 종목별 기록 (로컬 전용)
 const accessoryRecords = {
-  // 예시 구조
-  // "체스트프레스": {
-  //   "2026.01.24": [
-  //     { weight: 20, reps: 5 },
-  //     { weight: 30, reps: 4 }
-  //   ]
-  // }
+  chest: {},
+  back: {},
+  shoulder: {},
+  leg: {},
+  arm: {}
 };
+   
 let currentExercise = null;
 
 function openExerciseDetail(name) {
@@ -1864,12 +1863,19 @@ function openExerciseDetail(name) {
 
   document.getElementById('detail-exercise-name').textContent = name;
 
-  if (!accessoryRecords[name]) {
-    accessoryRecords[name] = {};
+  // 🔥 부위 기준으로 보장
+  if (!accessoryRecords[currentPart]) {
+    accessoryRecords[currentPart] = {};
+  }
+
+  if (!accessoryRecords[currentPart][name]) {
+    accessoryRecords[currentPart][name] = {};
   }
 
   renderAccessoryRecords();
 }
+
+   
 function closeExerciseDetail() {
   document.getElementById('exercise-detail-screen').style.display = 'none';
   exerciseScreen.style.display = 'block';
@@ -1892,11 +1898,12 @@ function addAccessorySet() {
 
   const date = getToday();
 
-  if (!accessoryRecords[currentExercise][date]) {
-    accessoryRecords[currentExercise][date] = [];
-  }
+if (!accessoryRecords[currentPart][currentExercise][date]) {
+  accessoryRecords[currentPart][currentExercise][date] = [];
+}
 
-  accessoryRecords[currentExercise][date].push({ weight, reps });
+accessoryRecords[currentPart][currentExercise][date].push({ weight, reps });
+
 
   document.getElementById('acc-weight').value = '';
   document.getElementById('acc-reps').value = '';
@@ -1907,7 +1914,9 @@ function renderAccessoryRecords() {
   const wrap = document.getElementById('acc-records');
   wrap.innerHTML = '';
 
-  const records = accessoryRecords[currentExercise];
+  const records = accessoryRecords[currentPart][currentExercise];
+   if (!records) return;
+   
   const dates = Object.keys(records).sort().reverse(); // 최신 오른쪽
 
   dates.forEach(date => {
@@ -1925,22 +1934,22 @@ function renderAccessoryRecords() {
   });
 }
 function getAccessorySummary(name) {
-  const data = accessoryRecords[name];
-  if (!data) return '기록 없음';
+  const partData = accessoryRecords[currentPart];
+  if (!partData || !partData[name]) return '기록 없음';
 
+  const data = partData[name];
   const dates = Object.keys(data);
   if (dates.length === 0) return '기록 없음';
 
   const latestDate = dates.sort().reverse()[0];
   const sets = data[latestDate];
 
-  if (!sets || sets.length === 0) return '기록 없음';
-
   return `
-    ${latestDate}<br>
-    ${sets.map(s => `${s.weight}kg × ${s.reps}회`).join('<br>')}
+    ${latestDate} ·
+    ${sets.map(s => `${s.weight}kg × ${s.reps}회`).join(', ')}
   `;
 }
+
 
 
 
