--- a/index.html
+++ b/index.html
@@ -1942,6 +1942,8 @@ function addAccessorySet() {
   document.getElementById('acc-reps').value = '';
 
   renderAccessoryRecords(); // 🔥 현재 종목만 다시 그림
+   renderExercises();
+
 }
 
 function renderAccessoryRecords() {
