--- a/index.html
+++ b/index.html
@@ -1108,8 +1108,6 @@ function fadeTempMsg(el, msg, timeout=1000, fadeDur=800){
 let accRecordsByExercise = {}; // 종목별 기록은 그대로
 let currentExerciseName = null; // 지금 보고 있는 종목
 
-// ❌ 기존 currentExercises 제거
-// let currentExercises = [];
 
 // ✅ 부위별 종목 배열
 let exercisesByPart = {
@@ -1122,7 +1120,41 @@ let exercisesByPart = {
 
 // 현재 선택된 부위
 let currentPart = 'chest';
+// 종목별 기록 객체
+let accRecordsByExercise = {};
+let currentExerciseName = null;
 
+const partButtons = document.querySelectorAll('.part-btn');
+const partScreen = document.getElementById('acc-part-screen');
+const exerciseScreen = document.getElementById('exercise-screen');
+
+partButtons.forEach(btn => {
+  btn.addEventListener('click', () => {
+    currentPart = btn.dataset.part;      // 현재 선택 부위 변경
+    renderExercises();                   // 해당 부위 종목 표시
+    partScreen.style.display = 'none';   // 부위 화면 숨기기
+    exerciseScreen.style.display = 'block'; // 종목 화면 표시
+    document.getElementById('current-part-name').textContent = currentPart;
+  });
+});
+
+function addExercise() {
+  const input = document.getElementById('exercise-search');
+  const name = input.value.trim();
+  if(!name) return;
+  
+  // 이미 있으면 추가 X
+  if(exercisesByPart[currentPart].includes(name)) return;
+
+  exercisesByPart[currentPart].unshift(name);
+  accRecordsByExercise[name] = [];
+  
+  input.value = '';
+  renderExercises();
+}
+
+   
+   
 const exerciseListEl = document.getElementById('exercise-list');
 const addExerciseBtn = document.getElementById('add-exercise-btn');
    
@@ -1131,20 +1163,17 @@ addExerciseBtn.addEventListener('click', addExercise);
 function getAccessorySummary(name){
   const list = accRecordsByExercise[name];
   if (!list || list.length === 0) return '기록 없음';
-
   const latest = list[0];
   return `${latest.weight}kg × ${latest.reps}회`;
 }
 
-   function renderExercises(){
-  const currentExercises = exercisesByPart[currentPart]; // ✅ 부위별 가져오기
-
+function renderExercises(){
+  const currentExercises = exercisesByPart[currentPart];
   if (!currentExercises.length) {
     exerciseListEl.innerHTML =
       `<div style="color:#777;font-size:13px;">아직 추가된 종목이 없습니다</div>`;
     return;
   }
-
   exerciseListEl.innerHTML = currentExercises.map(name => `
     <div class="exercise-card" onclick="openExerciseDetail('${name}')">
       <div class="exercise-name">${name}</div>
@@ -1152,6 +1181,7 @@ function getAccessorySummary(name){
     </div>
   `).join('');
 }
+
 
 
 
@@ -2053,15 +2083,46 @@ function renderAccessoryRecords(){
 
 function openExerciseDetail(name){
   currentExerciseName = name;
-
-  document.getElementById('exercise-screen').style.display = 'none';
+  partScreen.style.display = 'none';
+  exerciseScreen.style.display = 'none';
   document.getElementById('exercise-detail-screen').style.display = 'block';
   document.getElementById('detail-exercise-name').textContent = name;
-
   renderAccessoryRecords();
 }
 
-   
+function closeExerciseDetail(){
+  document.getElementById('exercise-detail-screen').style.display = 'none';
+  partScreen.style.display = 'block';
+}
+
+   function addAccessorySet(){
+  const weight = parseFloat(document.getElementById('acc-weight').value);
+  const reps = parseInt(document.getElementById('acc-reps').value);
+  if(!weight || !reps) return;
+
+  accRecordsByExercise[currentExerciseName].unshift({weight, reps});
+  
+  // 입력 필드 초기화
+  document.getElementById('acc-weight').value = '';
+  document.getElementById('acc-reps').value = '';
+
+  renderAccessoryRecords();
+  renderExercises();
+}
+
+function renderAccessoryRecords(){
+  const container = document.getElementById('acc-records');
+  const list = accRecordsByExercise[currentExerciseName];
+  if(!list || list.length===0){
+    container.innerHTML = '<div style="color:#777;font-size:13px;">기록 없음</div>';
+    return;
+  }
+
+  container.innerHTML = list.map(set => `
+    <div class="record-day">${set.weight}kg × ${set.reps}회</div>
+  `).join('');
+}
+
 
 
    
